--- a/categories.html
+++ b/categories.html
@@ -40,6 +40,22 @@
     
               </ul>
       </div>
+      <div class="hamburger-menu">
+        <input id="menu__toggle" type="checkbox" />
+        <label class="menu_btn" for="menu_toggle">
+          <span></span>
+        </label>
+    
+        <ul class="menu__box">
+              <li class="menu__item"><a href="categories.html">Categories</a></li>
+              <li class="menu__item"><a href="shows.html">Tv Shows</a></li>
+              <li class="menu__item"><a href="movies.html">Movies</a></li>
+              <li class="menu__item"><a href="music.html">Music</a></li>
+              <li class="menu__item"><a href="collection.html">Collection</a></li>
+              <li class="menu__item"><a href="about.html">About Us</a></li>
+              <li class="menu__item"><a href="feedback.html">Feedback</a></li>
+        </ul>
+      </div>
     </div>
 
     <div class="movie-list-container">
